# ChangeLog for dev-perl/Mail-SPF
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/ChangeLog,v 1.9 2010/07/06 20:56:05 ssuominen Exp $

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> Mail-SPF-2.007.ebuild:
  Keyword ~ppc64 wrt #313321

  21 Feb 2010; Patrick Lauer <patrick@gentoo.org> Mail-SPF-2.007.ebuild:
  Adding blocker for #281189

  20 Feb 2010; Raúl Porcel <armin76@gentoo.org> Mail-SPF-2.007.ebuild:
  Add ~alpha/~ia64/~sparc wrt #302880

  30 Jan 2010; Jeroen Roovers <jer@gentoo.org> Mail-SPF-2.007.ebuild:
  Marked ~hppa (bug #302880).

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -Mail-SPF-2.006.ebuild:
  Cleanup

*Mail-SPF-2.007 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +Mail-SPF-2.007.ebuild:
  Version bump via perl-bump experimental tool.

  10 Jun 2009; Torsten Veller <tove@gentoo.org> Mail-SPF-2.006.ebuild:
  Depends on virtual/perl-version, BSD licensed, EAPI=2

  10 Jun 2009; Robin H. Johnson <robbat2@gentoo.org> Mail-SPF-2.006.ebuild:
  Cleanup ebuild style.

  10 Jun 2009; Robin H. Johnson <robbat2@gentoo.org> Mail-SPF-2.006.ebuild:
  Cleanup ebuild style.

*Mail-SPF-2.006 (10 Jun 2009)

  10 Jun 2009; Robin H. Johnson <robbat2@gentoo.org> +Mail-SPF-2.006.ebuild,
  +metadata.xml:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
