@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Mail-SPF-v2.007.tar.gz 101722 RMD160 343c57f2bb8202838d22bac8162793695ca57f55 SHA1 df53baf018134481591317baf1b5d3a10702d4e7 SHA256 d8886e6a5b300946434284a6527bbb68ed98d27d3582c8e475e338facb96c50b
+EBUILD Mail-SPF-2.007-r1.ebuild 1042 RMD160 ce02b5719f5f2fd2ddb188cef9849fed2d5fe874 SHA1 25e53934f1e0643184cf00e32302ac991f259b8c SHA256 b595e322ab0849638552cd195adb94c85e29bc793bf340faf3376b6b2028a262
 EBUILD Mail-SPF-2.007.ebuild 766 RMD160 bf75616cf29889e4eab18f1c4b7e23beaf0c4367 SHA1 90fef8d8f48e741413f6e17cd9e6fa9097a9e3eb SHA256 ec1843e1f720b9766ed77eb72f9a8e03c5470edaadf9392683929aba2cb04f85
-MISC ChangeLog 1395 RMD160 25e64cd480ae8df476badc6d05c512ff225f42be SHA1 2d0cde2b75a96ae71ce2cc00fb6149059b483dd0 SHA256 6592f61663cf69e4a210758aabece68f2b51162bd24f20fb79b3540d8610215b
+MISC ChangeLog 1587 RMD160 b2c195f70c3958ee588d558af9fd3a1b658ac3ed SHA1 54879dda4456a77435f467489cecb9017e0f4976 SHA256 039b57c460281b7aaa81836aa4e348414c43d34bbed25221fdfabafff02ffcef
 MISC metadata.xml 271 RMD160 33d1e6d38b3ecde19f2a3a873476e4fc03fd0a41 SHA1 1b49b2ba691f42cbf4f86231769f560b7232453a SHA256 0670df6d1cf19fc80b5a9b574234d0d260f42c2c1889155d94922b0d63976ac2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkxoB94ACgkQV3J2n04Eauxm4gCeO4lovIAOCPghDKsZdSQcPBnz
+l+sAnjb3fpal3tnGbjqBzbDL0Vbg98Co
+=5V5g
+-----END PGP SIGNATURE-----
