@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Mail-SPF
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/ChangeLog,v 1.9 2010/07/06 20:56:05 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/ChangeLog,v 1.10 2010/08/15 15:29:21 tove Exp $
+
+*Mail-SPF-2.007-r1 (15 Aug 2010)
+
+  15 Aug 2010; Torsten Veller <tove@gentoo.org> +Mail-SPF-2.007-r1.ebuild:
+  Rename the spfquery script to avoid collisions with mail-filter/libspf2
+  (#281189)
 
   06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> Mail-SPF-2.007.ebuild:
   Keyword ~ppc64 wrt #313321
